--- a/Life-is-a-game/Life-is-a-game/Life-is-a-game.csproj
+++ b/Life-is-a-game/Life-is-a-game/Life-is-a-game.csproj
@@ -175,9 +175,13 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DataContext.cs" />
+    <Compile Include="Models\DeltaSkillModel.cs" />
+    <Compile Include="Models\EventModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\SkillGroupModel.cs" />
     <Compile Include="Models\SkillModel.cs" />
+    <Compile Include="Models\UserEventModel.cs" />
     <Compile Include="Models\UserSkillModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
