--- a/Life-is-a-game/Life-is-a-game/Life-is-a-game.csproj
+++ b/Life-is-a-game/Life-is-a-game/Life-is-a-game.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DataContext.cs" />
     <Compile Include="Models\DeltaSkillModel.cs" />
+    <Compile Include="Models\EventGroupModel.cs" />
     <Compile Include="Models\EventModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
